<resources>
    <string name="app_name">South Star Drug</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="field_error">This field is required!</string>
    <string name="invalid_email">Invalid Email Address!</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="login_txt_id">txtEmail</string>
    <string name="promotion_title">Promo</string>
    <string name="branches_title">Branches</string>
    <string name="profile_title">Profile</string>
    <string name="notification_title">Notification</string>
    <string name="more_title">More</string>
    <string name="store_hours_title">Store Hours</string>
    <string name="contact_num_title">Contact Number</string>
    <string name="invalid_username_password">Invalid Username / Password</string>
    <string name="user_not_found">User not found, Create a new account</string>
    <string name="network_error">"Please check your internet connection"</string>
    <string name="log_in_success">Log in successful!</string>
    <string name="user_exist">User with this email already exist, Please use a different email</string>
    <string name="incorrect_email_format">Incorrect Email Format / Password</string>
    <string name="registration_success">Registration Success!</string>
    <string name="progress_login">Logging in</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="exit_msg">Do you really want to exit?</string>
    <string name="reg_username_warning_one">Username should be atleast 6 characters above</string>
    <string name="reg_username_warning_two">2 more characters almost there</string>
    <string name="reg_password_warning">Password should be atleast 8 characters above</string>
    <string name="password_not_match">Your password and confirmation password do not match</string>
    <string name="loading">Loading</string>
    <string name="emptyfields">Please fill up all the Required Fields correctly</string>
    <string name="fetch_data_failed">Failed fetching of data</string>
    <string name="fetching_promos_complete">You have fetched all the promos available</string>
    <string name="fetching_branches_complete">You have fetched all the Branches</string>
    <string name="fetching_branches">Fetching branches</string>
    <string name="fetching_promo">Fetching promo</string>
</resources>
